--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,6 +12,7 @@
     </div>
     <ul class="products-list page__centerer">
       <li class="product-card">
+        <a href="#" class="product-card__specification-link">
           {{macros.picture(
             "product-card__image",
             "./img/catalog/",
@@ -21,8 +22,13 @@
             "140",
             "112"
           )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
@@ -32,20 +38,26 @@
             <span class="product-card__item-value">700 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "chicken-1000",
-          "png",
-          "Корм для котов со вкусом курицы",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "chicken-1000",
+            "png",
+            "Корм для котов со вкусом курицы",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
@@ -55,20 +67,26 @@
             <span class="product-card__item-value">1000 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "fish-500",
-          "png",
-          "Корм для котов со вкусом рыбы",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "fish-500",
+            "png",
+            "Корм для котов со вкусом рыбы",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
@@ -78,20 +96,26 @@
             <span class="product-card__item-value">700 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "fish-1000",
-          "png",
-          "Корм для котов со вкусом рыбы",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "fish-1000",
+            "png",
+            "Корм для котов со вкусом рыбы",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
@@ -101,20 +125,26 @@
             <span class="product-card__item-value">1000 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "buckwheat-500",
-          "png",
-          "Гречка",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "buckwheat-500",
+            "png",
+            "Гречка",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
@@ -124,20 +154,26 @@
             <span class="product-card__item-value">400 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "buckwheat-1000",
-          "png",
-          "Гречка",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "buckwheat-1000",
+            "png",
+            "Гречка",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
@@ -147,20 +183,26 @@
             <span class="product-card__item-value">700 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="product-card">
-        {{macros.picture(
-          "product-card__image",
-          "./img/catalog/",
-          "rice-500",
-          "png",
-          "Рис",
-          "140",
-          "112"
-        )}}
+        <a href="#" class="product-card__specification-link">
+          {{macros.picture(
+            "product-card__image",
+            "./img/catalog/",
+            "rice-500",
+            "png",
+            "Рис",
+            "140",
+            "112"
+          )}}
+          <span class="visually-hidden">Страница с описанием товара</span>
+        </a>
         <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+          <a href="#" class="product-card__specification-link">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+            <span class="visually-hidden">Страница с описанием товара</span>
+          </a>
           <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
@@ -170,7 +212,7 @@
             <span class="product-card__item-value">500 Р.</span>
           </div>
         </div>
-        <a href="#" class="product-card__button">заказать</a>
+        <a href="#" class="product-card__button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
       </li>
       <li class="show-more">
         <div class="show-more__text-container">
@@ -190,25 +232,25 @@
             <span class="additional__item-name">сахарозаменитель</span>
             <span class="additional__item-unit">1 упаковка (100 г)</span>
             <span class="additional__item-price">200 Р.</span>
-            <a href="#" class="additional__item-order-button">заказать</a>
+            <a href="#" class="additional__item-order-button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
           </li>
           <li class="additional__item">
             <span class="additional__item-name">питьевая вода</span>
             <span class="additional__item-unit">5 литров</span>
             <span class="additional__item-price">50 Р.</span>
-            <a href="#" class="additional__item-order-button">заказать</a>
+            <a href="#" class="additional__item-order-button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
           </li>
           <li class="additional__item">
             <span class="additional__item-name">молоко</span>
             <span class="additional__item-unit">1 литр</span>
             <span class="additional__item-price">100 Р.</span>
-            <a href="#" class="additional__item-order-button">заказать</a>
+            <a href="#" class="additional__item-order-button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
           </li>
           <li class="additional__item">
             <span class="additional__item-name">витамины</span>
             <span class="additional__item-unit">1 упаковка (30 г)</span>
             <span class="additional__item-price">300 Р.</span>
-            <a href="#" class="additional__item-order-button">заказать</a>
+            <a href="#" class="additional__item-order-button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
           </li>
         </ul>
         <div class="ad">
