--- a/source/form.html
+++ b/source/form.html
@@ -24,8 +24,8 @@
             <input class="inputs-group__input" id="weight" name="weight" type="number" required value="7" placeholder="Введите значение">
           </label>
           <label class="inputs-group__input-label" for="age">
-            Возраст (лет):*
-            <input class="inputs-group__input" id="age" name="age" type="number" required value="7" placeholder="Введите значение">
+            Возраст (лет):
+            <input class="inputs-group__input" id="age" name="age" type="number" value="7" placeholder="Введите значение">
           </label>
         </fieldset>
         <fieldset class="inputs-group inputs-group--type_program form-cat-program__border">
