--- a/source/index.html
+++ b/source/index.html
@@ -35,12 +35,12 @@
         <div class="nutrition-programm__card nutrition-programm__card--slim">
           <h2 class="nutrition-programm__title">Похудение</h2>
           <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a href="#" class="nutrition-programm__link">Каталог slim</a>
+          <a href="catalog.html" class="nutrition-programm__link">Каталог slim</a>
         </div>
         <div class="nutrition-programm__card nutrition-programm__card--fat">
           <h2 class="nutrition-programm__title">Набор массы</h2>
           <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="#" class="nutrition-programm__link">Каталог Pro</a>
+          <a href="catalog.html" class="nutrition-programm__link">Каталог Pro</a>
         </div>
       </section>
       <section class="description">
