--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   {% include "./templates/header.twig" %}
 {% endblock page__header %}
 {% block page__main %}
-  <main class="main">
+  <main class="main main--top-line">
     <div class="catalog-title page__centerer">
       <h1 class="catalog-title__text">Каталог продукции</h1>
     </div>
@@ -217,7 +217,7 @@
       <li class="show-more">
         <div class="show-more__text-container">
           <p class="show-more__important-text">Показать еще 100500 товаров</p>
-          <p class="show-more__regular-text">На&nbsp;самом деле вкусов гораздо больше!</p>
+          <p class="show-more__regular-text">На&nbsp;самом деле&nbsp;вкусов гораздо больше!</p>
         </div>
         <a href="#" class="show-more__button">показать все</a>
       </li>
@@ -236,7 +236,7 @@
           </li>
           <li class="additional__item">
             <span class="additional__item-name">питьевая вода</span>
-            <span class="additional__item-unit">5 литров</span>
+            <span class="additional__item-unit">5 литров&ensp;</span>
             <span class="additional__item-price">50 Р.</span>
             <a href="#" class="additional__item-order-button">заказать<span class="visually-hidden">Страница оформления заказа</span></a>
           </li>
