--- a/source/index.html
+++ b/source/index.html
@@ -34,12 +34,12 @@
       <section class="nutrition-programm">
         <div class="nutrition-programm__card nutrition-programm__card--slim">
           <h2 class="nutrition-programm__title">Похудение</h2>
-          <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <p class="nutrition-programm__text">Ваш кот весит больше собаки&nbsp;и почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="catalog.html" class="nutrition-programm__link">Каталог slim</a>
         </div>
         <div class="nutrition-programm__card nutrition-programm__card--fat">
           <h2 class="nutrition-programm__title">Набор массы</h2>
-          <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="nutrition-programm__text">Заработать авторитет среди дворовых&nbsp;котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="catalog.html" class="nutrition-programm__link">Каталог Pro</a>
         </div>
       </section>
@@ -56,7 +56,7 @@
               <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
           </li>
           <li class="description__item description__item--timer">
-              <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+              <p class="description__text">Уже&nbsp;через&nbsp;месяц наслаждайтесь изменениями к&nbsp;лучшему вашего&nbsp;питомца!</p>
           </li>
         </ol>
       </section>
@@ -65,7 +65,7 @@
       <div class="page__centerer example__container">
         <div class="example__facts">
           <h2 class="example__title">Живой&nbsp;пример</h2>
-          <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
+          <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек&nbsp;и по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
           <dl class="example__facts-list">
             <div class="example__item-container example__item-container--mass">
               <dt class="example__facts-item-explanation example__facts-item-explanation--mass"><span class="example__facts-item-explanation-text">снижение веса</span></dt>
